destination_rule.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: dr-sonarqube
  namespace: ci
spec:
  host: quality-sonarqube.ci.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: dr-postgres
  namespace: ci
spec:
  host: quality-postgresql.ci.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: dr-jenkins
  namespace: ci
spec:
  host: jenkins-service.ci.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
